fix blurry

--- a/superfantasykingdom/styles/style.css
+++ b/superfantasykingdom/styles/style.css
@@ -27,9 +27,9 @@ ul.navigation > li {
   display: inline-block;
 }
 
-img.iconfollower{
-  width:64px;
-  height:64px;
+img.icon{
+  width: 96px;
+  height: 96px;
   image-rendering: pixelated;
 }
 
@@ -48,20 +48,7 @@ body{
   background-color: #1d1d1d;
 }
 
-ul.followers {
-  width: fit-content;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-}
 
-ul.followers li {
-  float: left;
-  padding: 0px 10px;
-  margin: 5px 5px 0px 0px;
-  width: 100px;
-}
 span.has_alt {
   background-color: #030303;
   padding: 0px 3px;
@@ -84,50 +71,8 @@ ul.credits li {
 
 }
 
-li.follower_snrasha {
-  border-width: 2px;
-  border-style: solid;
-  border-color: #000;
-  background-color: #13b3b3;
-}
-li.follower_mirasein {
-    border-width: 2px;
-  border-style: solid;
-  border-color: #000;
-  background-color: #b313b3;
-}
-li.followertodo {
-    border-width: 2px;
-  border-style: solid;
 
-  border-color: #000;
-  background-color: #b30303;
 
-}
-li.followerlater {
-    border-width: 2px;
-  border-style: solid;
-  border-color: #000;
-  background-color: #030303;
-}
-li.follower_claim_mirasein {
-    border-width: 2px;
-  background-color: #b3b313;
-  border-style: solid;
-border-color:  #b313b3;
-}
-li.follower_claim_jh {
-    border-width: 2px;
-  background-color: #033303;
-  border-style: solid;
-  background-color: #b3b313;
-}
-li.follower_claim_snrasha {
-    border-width: 2px;
-  border-color:  #13b3b3;
-  border-style: solid;
-  background-color: #b3b313;
-}
 
 section.body{
   /*background-color: #333333;*/
@@ -192,9 +137,6 @@ div.footer-menu{
   padding-bottom: 10px;
   padding-left: 20px;
   padding-right: 20px;
-}
-table.followers td{
-  padding:5px;
 }
 
 
